# composition-analyzer-featurizer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  LICENSE  LICENSE.rst  README  README.md  README.rst  app.html  app.ipynb  binary M-X.xlsx  features.html  formulas.xlsx  formulas_by_label.xlsx  formulas_by_property.xlsx  genindex.html  getting-started.html  index.html  license.html  main.py  nodemon.json  objects.inv  py-modindex.html  pyproject.toml  release.html  requirements.txt  search.html  searchindex.js
.codespell/: ignore_words.txt
20240817_cif_ICSD/: EntryWithCollCode102712.cif  EntryWithCollCode104584.cif  EntryWithCollCode105403.cif  EntryWithCollCode180215.cif  EntryWithCollCode187622.cif  EntryWithCollCode190197.cif  EntryWithCollCode235960.cif  EntryWithCollCode235971.cif  EntryWithCollCode43054.cif  EntryWithCollCode43417.cif  EntryWithCollCode52294.cif  EntryWithCollCode53971.cif  EntryWithCollCode622097.cif  EntryWithCollCode623049.cif  EntryWithCollCode624932.cif  EntryWithCollCode629694.cif  EntryWithCollCode630842.cif  EntryWithCollCode641992.cif  EntryWithCollCode646875.cif  EntryWithCollCode651558.cif
20240817_cif_PCD/: 1300583.cif  1300659.cif  1301462.cif  1500012.cif  1500057.cif  250117.cif  250954.cif  250957.cif  251239.cif  251426.cif  251912.cif  251927.cif  251935.cif  251943.cif  251956.cif  251988.cif  251994.cif  252007.cif  252014.cif  252074.cif  260031.cif  260046.cif  260052.cif  260247.cif  260569.cif  260572.cif  260575.cif  260578.cif  260774.cif  260806.cif  261015.cif  261016.cif  261017.cif  (+201 more)
(+149 files in other folders)
